--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,9 @@ import:
   version: v1.4.0-alpha.1
   subpackages:
   - pkg/api
+- package: golang.org/x/net
+  subpackages:
+  - publicsuffix
+- package: github.com/CenturyLinkLabs/docker-reg-client
+  subpackages:
+  - registry
