Make fluxy deployable in Kubernetes
- kubectl create -f testdata/fluxy-rc.yaml
- Leverage automounted ca.crt and bearer token for auth
- Option to manually specify kubectl path
- ENTRYPOINT got bigger so split it into its own script
- Use nonglobal flagset to prevent pollution

--- a/testdata/fluxy-rc.yaml
+++ b/testdata/fluxy-rc.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: fluxy
-        image: weaveworks/fluxy:latest
+        image: weaveworks/fluxy
         imagePullPolicy: Never # must build manually
         ports:
         - containerPort: 3030
