Update deployment mechanism
- Use Deployment instead of ReplicationController
- Move args into the Deployment definition, out of the Dockerfile
- No longer exposing a port in the Dockerfile, either
- Need to take a path to a Bearer Token file, rather than the content
- Add a bit of debugging around flag parsing

--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -1,8 +1,6 @@
-FROM ubuntu:latest
-EXPOSE 3030
+FROM alpine:3.3
 ADD https://storage.googleapis.com/kubernetes-release/release/v1.2.4/bin/linux/amd64/kubectl /home/flux/
 RUN chmod +x /home/flux/kubectl
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY ./fluxd /home/flux/
-COPY ./entrypoint.bash /home/flux/
-ENTRYPOINT ["/home/flux/entrypoint.bash"]
+COPY ./entrypoint.sh /home/flux/
