--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -1,5 +1,4 @@
-FROM alpine:3.3
-ADD https://storage.googleapis.com/kubernetes-release/release/v1.2.4/bin/linux/amd64/kubectl /home/flux/
-RUN chmod +x /home/flux/kubectl
+FROM scratch
+ADD ./kubectl /home/flux/
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY ./fluxd /home/flux/
