An SQL history DB implementation
It is currently tested against cznic/ql, and will have difficulties
against other things for the minute, since `ql` has funny datatypes.

--- a/deploy/fluxy-deployment.yaml
+++ b/deploy/fluxy-deployment.yaml
@@ -21,3 +21,5 @@ spec:
         - --kubernetes-host=https://kubernetes
         - --kubernetes-certificate-authority=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - --kubernetes-bearer-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token
+        - --database-driver=ql
+        - --database-source=file://history.db
