Use gvt, which appears to be able to succeed where glide fails
 * Update instructions and circle.yaml to use `gvt`
 * (Still installs `glide` since it happens to be helpful for `glide
novendor`.)
 * Cache vendored directories in circle-ci

For now, the top level directories in vendor/ are cached, rather than
the entirety, since I'm afraid the latter would overwrite
vendor/manifest.

--- a/circle.yml
+++ b/circle.yml
@@ -13,9 +13,15 @@ checkout:
     - cd ${GOPATH}/src/github.com/weaveworks/fluxy
 
 dependencies:
+  cache_directories:
+    - "~/fluxy/vendor/k8s.io"
+    - "~/fluxy/vendor/github.com"
+    - "~/fluxy/vendor/gopkg.in"
+    - "~/fluxy/vendor/golang.org"
   override: 
     - go get github.com/Masterminds/glide
-    - glide install
+    - go get github.com/FiloSottile/gvt
+    - gvt restore
 
 test:
   override:
