--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -1,5 +1,7 @@
-FROM scratch
+FROM alpine:3.3
 WORKDIR /home/flux
+RUN apk add --no-cache git
 ADD ./kubectl /home/flux/
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+COPY ./fluxy-dumbconf.priv /home/flux/
 COPY ./fluxd /home/flux/
