--- a/deploy/fluxy-deployment.yaml
+++ b/deploy/fluxy-deployment.yaml
@@ -9,12 +9,20 @@ spec:
       labels:
         name: fluxy
     spec:
+      volumes:
+      - name: key
+        secret:
+        - secretName: fluxy-repo-key
       containers:
       - name: fluxy
         image: weaveworks/fluxy
         imagePullPolicy: Never # must build manually
         ports:
         - containerPort: 3030
+        volumeMounts:
+        - name: key
+          mountPath: /var/run/secrets/fluxy/key
+          readOnly: true
         args:
         - /home/flux/fluxd
         - --kubernetes-kubectl=/home/flux/kubectl
@@ -24,5 +32,5 @@ spec:
         - --database-driver=ql
         - --database-source=file://history.db
         - --automation-repo-url=git@github.com:peterbourgon/dumbconf
-        - --automation-repo-key=fluxy-dumbconf.priv
+        - --automation-repo-key=/var/run/secrets/fluxy/key/id-rsa
         - --automation-repo-path="/"
