Fix deployment secret definition

--- a/deploy/fluxy-deployment.yaml
+++ b/deploy/fluxy-deployment.yaml
@@ -12,7 +12,7 @@ spec:
       volumes:
       - name: key
         secret:
-        - secretName: fluxy-repo-key
+          secretName: fluxy-repo-key
       containers:
       - name: fluxy
         image: weaveworks/fluxy
