--- a/deploy/fluxy-deployment.yaml
+++ b/deploy/fluxy-deployment.yaml
@@ -31,6 +31,6 @@ spec:
         - --kubernetes-bearer-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token
         - --database-driver=ql
         - --database-source=file://history.db
-        - --automation-repo-url=git@github.com:peterbourgon/dumbconf
-        - --automation-repo-key=/var/run/secrets/fluxy/key/id-rsa
-        - --automation-repo-path="/"
+        - --repo-url=git@github.com:peterbourgon/dumbconf
+        - --repo-key=/var/run/secrets/fluxy/key/id-rsa
+        - --repo-path="/"
