--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -1,6 +1,6 @@
 FROM alpine:3.3
 WORKDIR /home/flux
-RUN apk add --no-cache git
+RUN apk add --no-cache git openssh
 ADD ./kubectl /home/flux/
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY ./fluxd /home/flux/
