Implementation of release workflows
- Enhancements to platform/kubernetes
- Updates to cmd/fluxd
- Include kubeservice to derive service from files

--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -3,4 +3,5 @@ WORKDIR /home/flux
 RUN apk add --no-cache git openssh
 ADD ./kubectl /home/flux/
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+COPY ./kubeservice /home/flux/
 COPY ./fluxd /home/flux/
