--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ _testmain.go
 # Specific to this project
 vendor/
 build/
-testdata/helloworld-linux-amd64
-testdata/.helloworld
+testdata/helloworld/helloworld-linux-amd64
+testdata/helloworld/.helloworld
+testdata/sidecar/sidecar-linux-amd64
+testdata/sidecar/.sidecar
 docker/fluxy-dumbconf.priv
