Keep downloads around
 1. Saves downloading them again after `make clean`
 2. Saves downloading them again after switching versions (less common
 than 1.)

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ _testmain.go
 # Specific to this project
 vendor/
 build/
+cache/
 testdata/helloworld/helloworld-linux-amd64
 testdata/helloworld/.helloworld
 testdata/sidecar/sidecar-linux-amd64
