--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -4,4 +4,5 @@ RUN apk add --no-cache git>=2.3.0 openssh python py-yaml
 ADD ./kubectl /home/flux/
 COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY ./kubeservice /home/flux/
+ADD ./migrations.tar /home/flux/
 COPY ./fluxd /home/flux/
