--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ testdata/helloworld/.helloworld
 testdata/sidecar/sidecar-linux-amd64
 testdata/sidecar/.sidecar
 docker/fluxy-dumbconf.priv
+.peter/*
