--- a/docker/Dockerfile.fluxy
+++ b/docker/Dockerfile.fluxy
@@ -1,8 +1,7 @@
 FROM alpine:3.3
 WORKDIR /home/flux
-RUN apk add --no-cache git>=2.3.0 openssh python py-yaml
-ADD ./kubectl /home/flux/
-COPY ./ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+RUN apk add --no-cache 'git>=2.3.0' openssh python py-yaml ca-certificates
+COPY ./kubectl /home/flux/
 COPY ./kubeservice /home/flux/
 ADD ./migrations.tar /home/flux/
 COPY ./fluxd /home/flux/
