--- a/deploy/fluxy-deployment.yaml
+++ b/deploy/fluxy-deployment.yaml
@@ -9,27 +9,16 @@ spec:
       labels:
         name: fluxy
     spec:
-      volumes:
-      - name: key
-        secret:
-          secretName: fluxy-repo-key
       containers:
       - name: fluxy
         image: weaveworks/fluxy
         imagePullPolicy: Never # must build manually
         ports:
         - containerPort: 3030
-        volumeMounts:
-        - name: key
-          mountPath: /var/run/secrets/fluxy/key
-          readOnly: true
         args:
         - /home/flux/fluxd
         - --kubernetes-kubectl=/home/flux/kubectl
         - --kubernetes-host=https://kubernetes
         - --kubernetes-certificate-authority=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - --kubernetes-bearer-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token
-        - --database-source=ql:history.db
-        - --repo-url=git@github.com:squaremo/fluxy-testdata
-        - --repo-key=/var/run/secrets/fluxy/key/id-rsa
-        - --repo-path=testdata
+        - --database-source=file://fluxy.db
