Update circle config

--- a/circle.yml
+++ b/circle.yml
@@ -15,9 +15,9 @@ checkout:
     - sudo rm -rf /usr/local/go
     - sudo tar -C /usr/local -xzf download/$GODIST
     - mkdir -p ${GOPATH}/src/github.com/weaveworks
-    - mv ${HOME}/fluxy ${GOPATH}/src/github.com/weaveworks
-    - ln -s ${GOPATH}/src/github.com/weaveworks/fluxy ${HOME}/fluxy # Circle needs this to be here, apparently
-    - cd ${GOPATH}/src/github.com/weaveworks/fluxy
+    - mv ${HOME}/flux ${GOPATH}/src/github.com/weaveworks/
+    - ln -s ${GOPATH}/src/github.com/weaveworks/flux ${HOME}/flux # Circle needs this to be here, apparently
+    - cd ${GOPATH}/src/github.com/weaveworks/flux
 
 dependencies:
   cache_directories:
@@ -37,7 +37,7 @@ test:
     - go test -v -race $(glide novendor)
   post:
     - |
-        cd ${GOPATH}/src/github.com/weaveworks/fluxy
+        cd ${GOPATH}/src/github.com/weaveworks/flux
         make all
 
 deployment:
