--- a/deploy/standalone/flux-deployment.yaml
+++ b/deploy/standalone/flux-deployment.yaml
@@ -11,14 +11,11 @@ spec:
     spec:
       containers:
       - name: fluxd
-        image: weaveworks/fluxd
-        imagePullPolicy: Never # must build manually
+        image: quay.io/weaveworks/fluxd:master-6cc08e4
         args:
-        - fluxd
         - --fluxsvc-address=ws://localhost:3030
       - name: fluxsvc
-        image: weaveworks/fluxsvc
+        image: quay.io/weaveworks/fluxsvc:master-6cc08e4
         imagePullPolicy: Never
         args:
-        - fluxsvc
         - --database-source=file://fluxy.db
