--- a/deploy/standalone/flux-service.yaml
+++ b/deploy/standalone/flux-service.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flux
+  name: fluxsvc
 spec:
+  type: NodePort
   ports:
     - port: 3030
   selector:
