--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,7 @@
 machine:
   services:
     - docker
+    - memcached
   environment:
     PATH: "/usr/local/go/bin:${HOME}/bin:${PATH}"
     GOROOT: ""
@@ -38,6 +39,7 @@ test:
         background: true
     - go build -v $(glide novendor)
     - go test -v -race $(glide novendor)
+    - go test -v -race -tags integration -timeout 30s $(glide novendor)
   post:
     - |
         cd ${GOPATH}/src/github.com/weaveworks/flux
