Remove heroku vendor folder from circle builds to fix build.

--- a/circle.yml
+++ b/circle.yml
@@ -31,6 +31,7 @@ dependencies:
     - go get github.com/FiloSottile/gvt
     - go get github.com/nats-io/gnatsd
     - gvt restore
+    - rm -r ./vendor/github.com/heroku/docker-registry-client/vendor || true # Remove the heroku vendor folder. Won't build without this.
 
 test:
   override:
