Fix review comments. Lots of typos. Removed middlewares. Refactoed tests some more to make use current mocks.

--- a/deploy/standalone/flux-deployment.yaml
+++ b/deploy/standalone/flux-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         image: quay.io/weaveworks/fluxsvc:master-6cc08e4
         args:
         - --database-source=file://flux.db
-#        - --memcached-hostname=memcached.default.svc.cluster.local
-#        - --memcached-timeout=100ms
-#        - --memcached-service=memcached
-#        - --registry-cache-expiry=20m
+        - --memcached-hostname=memcached.default.svc.cluster.local
+        - --memcached-timeout=100ms
+        - --memcached-service=memcached
+        - --registry-cache-expiry=20m
