Create a binary to query a SQL db and expose for prometheus.
This adds a simple binary that connects to an Postgres-like DB (e.g. RDS), performs a set of user-specified queries and exposes them on the `/metrics` endpoint.

The binary is added to the fluxsvc dockerfile. To use, alter the entrypoint to call the `fluxmon` application.

Queries are specified in a yaml file.

See `--help` for all options.

--- a/docker/Dockerfile.fluxsvc
+++ b/docker/Dockerfile.fluxsvc
@@ -4,4 +4,6 @@ RUN apk add --no-cache 'git>=2.3.0' openssh python py-yaml ca-certificates
 COPY ./kubeservice /usr/local/bin/
 ADD ./migrations.tar /home/flux/
 COPY ./fluxsvc /usr/local/bin/
+COPY ./queries.yaml /home/flux
+COPY ./fluxmon /usr/local/bin/
 ENTRYPOINT [ "fluxsvc" ]
