Update the standalone deployment instructions for moved flux api

--- a/deploy/standalone/flux-deployment.yaml
+++ b/deploy/standalone/flux-deployment.yaml
@@ -13,7 +13,7 @@ spec:
       - name: fluxd
         image: quay.io/weaveworks/fluxd:master-6cc08e4
         args:
-        - --fluxsvc-address=ws://localhost:3030
+        - --fluxsvc-address=ws://localhost:3030/api/flux
       - name: fluxsvc
         image: quay.io/weaveworks/fluxsvc:master-6cc08e4
         args:
