--- a/circle.yml
+++ b/circle.yml
@@ -62,7 +62,18 @@ deployment:
           docker tag weaveworks/fluxsvc "$IMAGE_TAG"
           docker push "$IMAGE_TAG"
   release:
-    tag: /v[0-9]+(\.[0-9]+)*/
+    tag: /[0-9]+(\.[0-9]+)*/
     commands:
       - make release-bins
       - bin/upload-binaries
+      - docker login -e '.' -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" quay.io
+      - |
+          IMAGE_TAG="quay.io/weaveworks/fluxd:$(./docker/image-tag)"
+          echo Pushing $IMAGE_TAG
+          docker tag weaveworks/fluxd "$IMAGE_TAG"
+          docker push "$IMAGE_TAG"
+          # Assumes that both images change in lock-step (they share a lot of code, so ..)
+          IMAGE_TAG="quay.io/weaveworks/fluxsvc:$(./docker/image-tag)"
+          echo Pushing $IMAGE_TAG
+          docker tag weaveworks/fluxsvc "$IMAGE_TAG"
+          docker push "$IMAGE_TAG"
