--- a/circle.yml
+++ b/circle.yml
@@ -72,8 +72,10 @@ deployment:
           echo Pushing $IMAGE_TAG
           docker tag weaveworks/fluxd "$IMAGE_TAG"
           docker push "$IMAGE_TAG"
+          docker push weaveworks/fluxd:latest
           # Assumes that both images change in lock-step (they share a lot of code, so ..)
           IMAGE_TAG="quay.io/weaveworks/fluxsvc:$(./docker/image-tag)"
           echo Pushing $IMAGE_TAG
           docker tag weaveworks/fluxsvc "$IMAGE_TAG"
           docker push "$IMAGE_TAG"
+          docker push weaveworks/fluxsvc:latest
