Install tini as pid1, so we reap child processes, as git leaves zombies

--- a/docker/Dockerfile.fluxd
+++ b/docker/Dockerfile.fluxd
@@ -1,6 +1,6 @@
-FROM alpine:3.3
+FROM alpine:3.5
 WORKDIR /home/flux
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates tini
 COPY ./kubectl /usr/local/bin/
 COPY ./fluxd /usr/local/bin/
-ENTRYPOINT [ "fluxd" ]
+ENTRYPOINT [ "/sbin/tini", "--", "fluxd" ]
