--- a/docker/Dockerfile.fluxsvc
+++ b/docker/Dockerfile.fluxsvc
@@ -1,7 +1,6 @@
 FROM alpine:3.5
 WORKDIR /home/flux
-RUN apk add --no-cache 'git>=2.3.0' openssh python py-yaml ca-certificates tini
-COPY ./kubeservice /usr/local/bin/
+RUN apk add --no-cache 'git>=2.3.0' openssh ca-certificates tini
 ADD ./migrations.tar /home/flux/
 COPY ./fluxsvc /usr/local/bin/
 ENTRYPOINT [ "/sbin/tini", "--", "fluxsvc" ]
