Encode test invocation into Makefile
This moves the invocation of `go test` into the Makefile, for
convenience of users and the CircleCI script; and removes the need for
`glide` to be installed.

NB drops the `go build ...` step from the CircleCI test stage -- it's
not doing anything that `go test` and `make all` won't do, and it adds
significantly to the build time.

Also drops the invocation of `go test` without the tag `integration`,
since those get run when the tag's present too.

--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,6 @@ dependencies:
     - "~/flux/vendor/golang.org"
     - "~/download"
   override:
-    - go get github.com/Masterminds/glide
     - go get github.com/FiloSottile/gvt
     - go get github.com/nats-io/gnatsd
     - go get github.com/weaveworks/github-release
@@ -41,9 +40,7 @@ test:
   override:
     - gnatsd:
         background: true
-    - go build -v $(glide novendor)
-    - go test -v -race $(glide novendor)
-    - go test -v -race -tags integration -timeout 30s $(glide novendor)
+    - make test TEST_FLAGS="-race -tags integration -timeout 30s"
   post:
     - |
         cd ${GOPATH}/src/github.com/weaveworks/flux
