Make releases work in the daemon
This involves moving a bunch of stuff around. Again.

 - platform.Daemon -> daemon.Daemon, so it can depend on release
   without a cycle

 - release now deals with a ReleaseContext, which may just go away (in
   fact release/*.go may just go into daemon/)

 - some work to get to the point of cloning the repo

 - move kubeservice and its dependencies into the fluxd image

--- a/docker/Dockerfile.fluxd
+++ b/docker/Dockerfile.fluxd
@@ -1,6 +1,7 @@
 FROM alpine:3.5
 WORKDIR /home/flux
-RUN apk add --no-cache ca-certificates tini
+ENTRYPOINT [ "/sbin/tini", "--", "fluxd" ]
+RUN apk add --no-cache python py-yaml openssh ca-certificates tini 'git>=2.3.0'
+COPY ./kubeservice /usr/local/bin/
 COPY ./kubectl /usr/local/bin/
 COPY ./fluxd /usr/local/bin/
-ENTRYPOINT [ "/sbin/tini", "--", "fluxd" ]
