Update example deployment
There's no need to have different deployments for standalone vs
cloud-connected, since the latter is only an argument or two
different.

--- a/deploy/memcache-dep.yaml
+++ b/deploy/memcache-dep.yaml
@@ -1,4 +1,6 @@
 ---
+# You can optionally deploy memcache, for the Flux daemon to cache
+# container image metadata.
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
