--- a/deploy/flux-service.yaml
+++ b/deploy/flux-service.yaml
@@ -1,7 +1,16 @@
+---
+# This defines a Kubernetes service for the Flux daemon, so you can
+# access it with `fluxctl`. It defines a NodePort, meaning Kubernetes
+# will assign a port to the service, on which it will be available on
+# each node (host in the cluster). You can find the assigned port by
+# doing something like
+#
+#    kubectl get service flux --template '{{ index .spec.ports 0 "nodePort" }}'
+#
 apiVersion: v1
 kind: Service
 metadata:
-  name: fluxsvc
+  name: flux
 spec:
   type: NodePort
   ports:
