--- a/circle.yml
+++ b/circle.yml
@@ -78,10 +78,10 @@ deployment:
       - bin/upload-binaries
       - docker login -e '.' -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" quay.io
       - |
-          IMAGE_TAG="quay.io/weaveworks/fluxd:$(./docker/image-tag)"
+          IMAGE_TAG="quay.io/weaveworks/flux:$(./docker/image-tag)"
           echo Pushing $IMAGE_TAG
           docker push "$IMAGE_TAG"
           # Assumes that both images change in lock-step (they share a lot of code, so ..)
-          IMAGE_TAG="quay.io/weaveworks/fluxsvc:$(./docker/image-tag)"
+          IMAGE_TAG="quay.io/weaveworks/flux-service:$(./docker/image-tag)"
           echo Pushing $IMAGE_TAG
           docker push "$IMAGE_TAG"
