--- a/docker/Dockerfile.helm-operator
+++ b/docker/Dockerfile.helm-operator
@@ -1,6 +1,16 @@
 FROM alpine:3.6
+
+# These are pretty static
+LABEL org.label-schema.schema-version="1.0" \
+      org.label-schema.name="flux-helm-operator" \
+      org.label-schema.description="The Flux Helm operator, for releasing Helm charts according to git" \
+      org.label-schema.url="https://github.com/weaveworks/flux" \
+      org.label-schema.vcs-url="git@github.com:weaveworks/flux" \
+      org.label-schema.vendor="Weaveworks"
+
 WORKDIR /home/flux
 ENTRYPOINT [ "/sbin/tini", "--", "helm-operator" ]
+
 RUN apk add --no-cache openssh ca-certificates tini 'git>=2.3.0'
 
 # Add git hosts to known hosts file so when git ssh's using the deploy
@@ -13,3 +23,10 @@ COPY ./ssh_config /root/.ssh/config
 
 COPY ./kubectl /usr/local/bin/
 COPY ./helm-operator /usr/local/bin/
+
+ARG BUILD_DATE
+ARG VCS_REF
+
+# These will change for every build
+LABEL org.label-schema.vcs-ref=$VCS_REF \
+      org.label-schema.build-date=$BUILD_DATE
