--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -21,3 +21,7 @@
 [[override]]
   name = "github.com/ugorji/go"
   revision = "8c0409fcbb70099c748d71f714529204975f6c3f"
+
+[[override]]
+  name = "github.com/gorilla/mux"
+  revision = "780415097119f6f61c55475fe59b66f3c3e9ea53"
