--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -14,9 +14,9 @@
   name = "github.com/google/go-github"
   revision = "dfd20fd7fa6edec56447fcb049acd5e17a78ec2e"
 
-[[constraint]]
-  name = "github.com/mattes/migrate"
-  revision = "ce1b59bb819416ca67422929b1cb48bb342720b6"
+[[override]]
+  name = "gopkg.in/mattes/migrate.v1"
+  version = "v1.3.2"
 
 [[constraint]]
   name = "github.com/heroku/docker-registry-client"
