--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -21,7 +21,7 @@
 [[constraint]]
   name = "github.com/heroku/docker-registry-client"
   source = "https://github.com/weaveworks/docker-registry-client.git"
-  branch = "handle-relative-nextlinks"
+  branch = "master"
 
 [[override]]
   name = "github.com/ugorji/go"
