Basic integration tests
Run manually with `make integration-test` to test a straightforward
initial sync followed by an automated release using a `flux-test`
minikube profile.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ testdata/helloworld/.helloworld
 testdata/sidecar/sidecar-linux-amd64
 testdata/sidecar/.sidecar
 docker/fluxy-dumbconf.priv
+test/profiles
