vendor: Update prometheus client_golang
By default, go dep will take the latest stable version released. For
client_golang this means it will lock the 0.8.0 version from 2016-08-17. It
seems a sub-optimal default and was causing our golang services to be missing
interesting metrics and bug fixes.

Also filed: https://github.com/prometheus/client_golang/issues/375

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -6,3 +6,9 @@
 [[constraint]]
   name = "github.com/docker/distribution"
   branch = "master"
+
+# Pin to master branch until there is a more recent stable release:
+#   https://github.com/prometheus/client_golang/issues/375
+[[constraint]]
+  name = "github.com/prometheus/client_golang"
+  branch = "master"
